# EventPlanner

./: .gitignore  .gitmodules  CMakeLists.txt  Event.cpp  Event.h  EventManager.cpp  EventManager.h  PLAN_TRANSLATARE_GUI.md  README.md  main.cpp  main_gui.cpp
backend/: CMakeLists.txt  Event.cpp  EventManager.cpp  EventManager.h  JsonUtils.cpp  JsonUtils.h  main.cpp  main_api.cpp  main_gui.cpp  server.cpp
event-planner-frontend/: README.md  angular.json  package-lock.json  package.json
event-planner-frontend/src/: index.html
event-planner-frontend/src/app/: app.component.spec.ts  app.component.ts  app.module.ts
event-planner-frontend/src/app/components/: event-list.component.css  event-list.component.html  event-list.component.ts
event-planner-frontend/src/app/models/: event.model.ts
event-planner-frontend/src/app/services/: event.service.ts
frontend/: angular.json  capacitor.config.ts  package-lock.json  package.json
frontend/ios/App/App/: Info.plist
frontend/ios/App/App.xcodeproj/: project.pbxproj
frontend/src/: index.html  styles.scss
frontend/src/app/: app.config.ts  app.html  app.routes.ts  app.scss  app.ts  event-local.service.ts  event.model.ts  event.service.ts  event.spec.ts  event.ts
frontend/src/app/add-event/: add-event.component.html  add-event.component.scss  add-event.component.spec.ts  add-event.component.ts
frontend/src/app/confirmation-dialog/: confirmation-dialog.component.html  confirmation-dialog.component.ts
frontend/src/app/events-list/: events-list.component.html  events-list.component.scss  events-list.component.spec.ts  events-list.component.ts
frontend/src/app/services/: event-local.service.spec.ts  event-local.service.ts  event.service.ts  notification.service.ts  platform.service.spec.ts  platform.service.ts
